Fix article content becoming visible where it should not

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -1241,6 +1241,18 @@
       display: block;
     }
   }
+
+  .article-type {
+    margin-top: 10px;
+  }
+
+  .article-type--visible {
+    display: inline-block;
+  }
+
+  .article-type img {
+    max-width: 95%;
+  }
 }
 
 .reply-indicator {
